--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "PWA",
-  "short_name": "PWA",
+  "name": "4lex8lue",
+  "short_name": "4lex8lue",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "https://ab80x08.github.io/4lex8lue/is.png",
