--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ph",
-  "short_name": "Ph",
-  "start_url": "https://www.pornhub.com/",
+  "name": "4lex8lue",
+  "short_name": "4lex8lue",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
